update swagger docs 3
